--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
 
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -184,7 +184,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 d-flex flex-column justify-content-center">
-                    <h1>Buy anything without spending money</h1>
+                    <h1 class="hero-title">Buy anything without spending money</h1>
                     <div class="text-center text-lg-start">
                         <a href="#categories" class="btn-get-started d-inline-flex align-items-center justify-content-center align-self-center">
                             <span>Get Started</span><i class="fas fa-arrow-down"></i>
@@ -285,7 +285,7 @@
                         </div>
                         <a href="item-detail/trousers.html">
 
-                            <img src="resources/images/fashion/fashion1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/fashion/fashion1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Quebec
@@ -319,7 +319,7 @@
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
                         <a href="#">
-                            <img src="resources/images/electronic/electronic1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/electronic/electronic1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
@@ -349,7 +349,7 @@
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
                         <a href="#">
-                            <img src="resources/images/children/children1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/children/children1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Halifax
@@ -381,7 +381,7 @@
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
                         <a href="#">
-                            <img src="resources/images/household/household1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/household/household1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Fredericton
@@ -414,7 +414,7 @@
                             <span class="d-table badge bg-success mb-1">Exchange</span>
                         </div>
                         <a href="#">
-                            <img src="resources/images/fashion/fashion6-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/fashion/fashion6-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Winnipeg
@@ -446,7 +446,7 @@
                         </div>
                         <a href="#">
 
-                            <img src="resources/images/electronic/electronic5-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/electronic/electronic5-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fixss">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Victoria
@@ -478,7 +478,7 @@
                         </div>
                         <a href="#">
 
-                            <img src="resources/images/children/children4-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/children/children4-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Charlottetown
@@ -510,7 +510,7 @@
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
                         <a href="#">
-                            <img src="resources/images/vehicle/vehicle1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/vehicle/vehicle1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Saskatoon
@@ -545,7 +545,7 @@
                         </div>
                         <a href="#">
 
-                            <img src="resources/images/fashion/fashion1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/fashion/fashion1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Quebec
@@ -575,7 +575,7 @@
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
                         <a href="#">
-                            <img src="resources/images/electronic/electronic1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/electronic/electronic1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
@@ -603,7 +603,7 @@
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
                         <a href="#">
-                            <img src="resources/images/children/children1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/children/children1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Halifax
@@ -633,7 +633,7 @@
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
                         <a href="#">
-                            <img src="resources/images/household/household1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/household/household1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Fredericton
@@ -713,7 +713,7 @@
                         </div>
                         <a href="#">
 
-                            <img src="resources/images/fashion/fashion1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/fashion/fashion1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Quebec
@@ -745,7 +745,7 @@
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
                         <a href="#">
-                            <img src="resources/images/electronic/electronic1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/electronic/electronic1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
@@ -775,7 +775,7 @@
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
                         <a href="#">
-                            <img src="resources/images/children/children1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/children/children1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Halifax
@@ -807,7 +807,7 @@
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
                         <a href="#">
-                            <img src="resources/images/household/household1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/household/household1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Fredericton
@@ -840,7 +840,7 @@
                             <span class="d-table badge bg-success mb-1">Exchange</span>
                         </div>
                         <a href="#">
-                            <img src="resources/images/fashion/fashion6-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/fashion/fashion6-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Winnipeg
@@ -872,7 +872,7 @@
                         </div>
                         <a href="#">
 
-                            <img src="resources/images/electronic/electronic5-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/electronic/electronic5-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Victoria
@@ -904,7 +904,7 @@
                         </div>
                         <a href="#">
 
-                            <img src="resources/images/children/children4-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/children/children4-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Charlottetown
@@ -936,7 +936,7 @@
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
                         <a href="#">
-                            <img src="resources/images/vehicle/vehicle1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                            <img src="resources/images/vehicle/vehicle1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Saskatoon
@@ -1024,14 +1024,16 @@
                     </div>
 
                     <div class="col-lg-3 col-md-12 footer-links">
-                        <h4>Categories</h4>
-                        <ul>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Fashion</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Electronics</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Kids' Furniture</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Household</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Vehicle</a></li>
-                        </ul>
+                        <h4 class="text-center">Categories</h4>
+                        <div class="d-flex justify-content-center">
+                            <ul>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/fashion.html">Fashion</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Electronics</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Kids' Furniture</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Household</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Vehicle</a></li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
