--- a/charity.html
+++ b/charity.html
@@ -7,17 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- import fontawesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <!-- import google font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="charity.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="resources/css/charity.css">
 
     <title>OBG | Charity</title>
     <link rel="icon" href="resources/images/logo.png">
@@ -29,9 +26,7 @@
     <nav class="navbar fixed-top bg-danger rounded navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand d-flex justify-content-between" href="index.html">
-                <img src="resources/images/logo.png" alt="" width="24" height="24"
-                    class="d-inline-block align-text-top">
-                OBG
+                <img src="resources/images/logo.png" alt="" width="24" height="24" class="d-inline-block align-text-top"> OBG
             </a>
             <form class="d-flex w-50">
                 <input type="text" class="form-control" placeholder="Search...">
@@ -46,34 +41,29 @@
                             title="Notification"></i>
                     </button>
 
-                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                        aria-labelledby="offcanvasRightLabel">
+                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                         <div class="offcanvas-header">
                             <h5 id="offcanvasRightLabel"><i class="far fa-bell"></i> Notification</h5>
-                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                                aria-label="Close"></button>
+                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                         </div>
                         <div class="offcanvas-body">
                             <div class="alert alert-success alert-dismissible fade show" role="alert">
                                 <strong>Dennis</strong> wants to buy your stuff
                                 <br>
                                 <a href="#" class="text-success">Click here to view more</a>
-                                <button type="button" class="btn-close" data-bs-dismiss="alert"
-                                    aria-label="Close"></button>
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                             </div>
                             <div class="alert alert-success alert-dismissible fade show" role="alert">
                                 <strong>Bryan</strong> wants to exchange items with you
                                 <a href="#" class="text-success">Click here to view more</a>
-                                <button type="button" class="btn-close" data-bs-dismiss="alert"
-                                    aria-label="Close"></button>
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                             </div>
                         </div>
                     </div>
                 </li>
                 <li class="nav-item">
                     <a href="post.html" class="btn me-2">
-                        <i class="far fa-clipboard" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            title="Post"></i>
+                        <i class="far fa-clipboard" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Post"></i>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -83,16 +73,13 @@
                 </li>
                 <li class="nav-item">
                     <a href="cart.html" class="btn me-5">
-                        <i class="fas fa-shopping-cart" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            title="Cart"></i>
+                        <i class="fas fa-shopping-cart" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Cart"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <div class="flex-shrink-0 dropdown mt-2">
-                        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser2"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32"
-                                class="rounded-circle">
+                        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
                         </a>
                         <ul class="dropdown-menu text-small shadow border-0 p-3">
                             <li><a class="dropdown-item" href="profile.html">Profile</a></li>
@@ -118,12 +105,10 @@
                 <button class="btn me-4" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight-mobile">
                     <i class="far fa-bell"></i>
                 </button>
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight-mobile"
-                    aria-labelledby="offcanvasRightLabel">
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight-mobile" aria-labelledby="offcanvasRightLabel">
                     <div class="offcanvas-header">
                         <h5 id="offcanvasRightLabel">Notification</h5>
-                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                            aria-label="Close"></button>
+                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -173,13 +158,10 @@
                             <h1 class="text-white">Free collection service</h1>
                         </div>
                         <div class="col-lg-12">
-                            <p class="text-white fs-">We offer a free collection service for your furniture,
-                                electricals,
-                                homewares and more</p>
+                            <p class="text-white fs-">We offer a free collection service for your furniture, electricals, homewares and more</p>
                         </div>
                         <div class="col-lg-12">
-                            <button type="button" class="btn-book bg-white text-danger border-0 rounded-3 p-2"
-                                data-bs-toggle="modal" data-bs-target="#myModal">
+                            <button type="button" class="btn-book bg-white text-danger border-0 rounded-3 p-2" data-bs-toggle="modal" data-bs-target="#myModal">
                                 Book a free collection
                                 <i class="fas fa-id-card-alt"></i>
                             </button>
@@ -241,16 +223,14 @@
                         <div class="form-row row">
                             <div class="form-group  col-md-6">
                                 <label for="inputName">Full name</label>
-                                <input type="text" class="form-control " id="inputName" placeholder="Full name"
-                                    required>
+                                <input type="text" class="form-control " id="inputName" placeholder="Full name" required>
                                 <div class="invalid-feedback">
                                     Full name is required
                                 </div>
                             </div>
                             <div class="form-group  col-md-6">
                                 <label for="inputPhone">Phone number</label>
-                                <input type="text" class="form-control" id="inputPhone" placeholder="Phone number"
-                                    required>
+                                <input type="text" class="form-control" id="inputPhone" placeholder="Phone number" required>
                                 <div class="invalid-feedback">
                                     Phone number is required
                                 </div>
@@ -260,8 +240,7 @@
                         <div class="form-row row">
                             <div class="form-group  col-md-12">
                                 <label for="inputAddress">Address</label>
-                                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St"
-                                    required>
+                                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
                                 <div class="invalid-feedback">
                                     Address is required
                                 </div>
@@ -275,8 +254,7 @@
                             </div>
                         </div>
                         <div class="form-row col-md-12">
-                            <button type="submit" class="btn btn-primary col-md-12"
-                                style="width: 100%;">Submit</button>
+                            <button type="submit" class="btn btn-primary col-md-12" style="width: 100%;">Submit</button>
                         </div>
 
                     </form>
@@ -298,10 +276,8 @@
                         <a href="index.html" class="logo d-flex align-items-center">
                             <span> About OBG</span>
                         </a>
-                        <p>OBG is a marketplace where people can purchase, sell, swap, and donate unwanted products. All
-                            you have to do is provide us with some details and photos about the item you no longer need,
-                            and we'll take care of the rest. Our goal is to encourage people to live a more frugal
-                            lifestyle and to minimize waste as much as possible.</p>
+                        <p>OBG is a marketplace where people can purchase, sell, swap, and donate unwanted products. All you have to do is provide us with some details and photos about the item you no longer need, and we'll take care of the rest. Our goal
+                            is to encourage people to live a more frugal lifestyle and to minimize waste as much as possible.</p>
                         <div class="social-links mt-3">
                             <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
                             <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
@@ -324,9 +300,7 @@
                     <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
                         <h4>Contact Us</h4>
                         <p>
-                            470 Tran Dai Nghia<br>
-                            Ngu Hanh Son, Da Nang<br>
-                            Viet Nam<br><br>
+                            470 Tran Dai Nghia<br> Ngu Hanh Son, Da Nang<br> Viet Nam<br><br>
                             <strong>Phone:</strong> 18006789<br>
                             <strong>Email:</strong> obg@gmail.com<br>
                         </p>
@@ -348,16 +322,14 @@
     </footer>
     <!-- End Footer -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
-        (function () {
+        (function() {
             'use strict'
             var forms = document.querySelectorAll('.needs-validation')
             Array.prototype.slice.call(forms)
-                .forEach(function (form) {
-                    form.addEventListener('submit', function (event) {
+                .forEach(function(form) {
+                    form.addEventListener('submit', function(event) {
                         if (!form.checkValidity()) {
                             event.preventDefault()
                             event.stopPropagation()
@@ -366,13 +338,12 @@
                     }, false)
                 })
         })()
-
     </script>
 
     <!-- Tooltip -->
     <script>
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+        var tooltipList = tooltipTriggerList.map(function(tooltipTriggerEl) {
             return new bootstrap.Tooltip(tooltipTriggerEl)
         })
     </script>
