--- a/item-detail/trousers.html
+++ b/item-detail/trousers.html
@@ -223,7 +223,7 @@
                 <div class="tab-content mt-2">
                     <!-- About -->
                     <div class="tab-pane fade show active" id="about">
-                        <p>
+                        <p class="description">
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa, ipsa, neque eveniet magni excepturi unde, eum eos quibusdam cupiditate repudiandae exercitationem ducimus dolore quae architecto illo! Molestiae illo doloremque ab laudantium cumque. Corporis
                             officia ipsum aliquam qui, assumenda suscipit. Aperiam laborum ipsum quos nulla minima. Laborum, magni quaerat labore quam maxime libero, ipsum, cumque molestias quibusdam reprehenderit tempora id? Quaerat deleniti voluptatem
                             aut perferendis rem architecto dignissimos? Odio commodi facere repellat illum incidunt eum, voluptas tempora, ipsam accusamus mollitia eveniet beatae facilis provident totam nam dicta vero ut accusantium labore quia hic sunt
@@ -256,10 +256,12 @@
                         </div>
                         <form method="post">
                             <div class="d-flex justify-content-between align-items-center mb-3 mt-5">
-                                <h2 class="h5 m-0">Add a Comment</h2>
+                                <h5>Add a Comment</h5>
                             </div>
                             <textarea name="description" class="form-control border" placeholder="Add a comment" rows="6" data-bind-characters-target="#charactersRemaining" maxlength="1000" required=""></textarea>
-                            <div class="d-flex justify-content-between mt-3"><small class="font-weight-light"><span id="charactersRemaining">1000</span> characters remaining</small> <button type="submit" class="btn btn-primary">Add comment</button></div>
+                            <div class="d-flex justify-content-between mt-3">
+                                <small class="font-weight-light"><span id="charactersRemaining">1000</span> characters remaining</small>
+                                <button type="submit" class="btn btn-primary fs-6">Add comment</button></div>
                         </form>
                     </div>
                     <!-- End Comments -->
@@ -273,10 +275,12 @@
             </div>
             <div class="col-lg-4">
                 <div class="card bg-soft border-light p-3">
-                    <div class="d-flex align-items-baseline"><span class="h3 font-weight-bold mb-0 mr-1">$ 250</span></div>
+                    <div class="d-flex"><span class="h3">$ 250</span></div>
                 </div>
-                <div class="card border-light mt-4 p-3"><button class="btn btn-primary">Buy Now</button></div>
                 <div class="card border-light mt-4 p-3">
+                    <a href="../checkout.html" class="btn btn-primary fixed-bottom-mobile fixed-buy-now">Buy Now</a>
+                </div>
+                <div class="card border-light mt-4 p-3 ">
                     <h5 class="font-weight-normal">Property Owner</h5>
                     <div class="media d-flex align-items-center my-3">
                         <a href="#" class="avatar-lg me-2">
@@ -286,7 +290,24 @@
                             <a class="text-dark" href="#">Jose Leos</a>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-primary mb-3">Exchange</button>
+                    <button type="button" class="btn btn-primary mb-3 fixed-bottom-mobile" data-bs-toggle="modal" data-bs-target="#exchange">Exchange</button>
+                    <div class="modal fade" id="exchange" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    ...
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="card border-light mt-4 p-3">
                     <h5 class="font-weight-normal">Contact</h5>
@@ -305,13 +326,13 @@
                     <div class="d-flex justify-content-between border-bottom py-2">
                         <div>
                             <div class="fw-semibold text-dark">Address</div>
-                            <div class="fs-sm text-muted">Somewhere</div>
+                            <div class="fs-sm text-muted">26, Quebec, BC, Canada</div>
                         </div>
                     </div>
                     <div class="d-flex justify-content-between pt-2">
-                        <a class="btn-share btn-twitter me-2 my-2" href="#"><i
+                        <a class="btn-share btn-twitter me-1 my-2" href="#"><i
                                 class="fab fa-twitter"></i> Twitter</a>
-                        <a class="btn-share btn-instagram me-2 my-2" href="#"><i
+                        <a class="btn-share btn-instagram me-1 my-2" href="#"><i
                                 class="fab fa-instagram"></i> Instagram</a>
                         <a class="btn-share btn-facebook my-2" href="#"><i
                                 class="fab fa-facebook"></i> Facebook</a>
@@ -333,7 +354,7 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/fashion/fashion2-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                        <img src="../resources/images/fashion/fashion2-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
@@ -362,7 +383,7 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/fashion/fashion3-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                        <img src="../resources/images/fashion/fashion3-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
@@ -391,7 +412,7 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/fashion/fashion4-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                        <img src="../resources/images/fashion/fashion4-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
@@ -420,7 +441,7 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/fashion/fashion5-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                        <img src="../resources/images/fashion/fashion5-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
@@ -449,7 +470,7 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/fashion/fashion6-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                        <img src="../resources/images/fashion/fashion6-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
@@ -511,7 +532,7 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/electronic/electronic1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                        <img src="../resources/images/electronic/electronic1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
@@ -540,7 +561,7 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/children/children2-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                        <img src="../resources/images/children/children2-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
@@ -569,7 +590,7 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/household/household4-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                        <img src="../resources/images/household/household4-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
@@ -598,7 +619,7 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/vehicle/vehicle3-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                        <img src="../resources/images/vehicle/vehicle3-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
@@ -627,7 +648,7 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/vehicle/vehicle5-2.jpg" alt="" width="100%" height="225" class="rounded-3 img-hover">
+                        <img src="../resources/images/vehicle/vehicle5-2.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
@@ -698,14 +719,16 @@
                     </div>
 
                     <div class="col-lg-3 col-md-12 footer-links">
-                        <h4>Categories</h4>
-                        <ul>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Fashion</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Electronics</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Kids' Furniture</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Household</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Vehicle</a></li>
-                        </ul>
+                        <h4 class="text-center">Categories</h4>
+                        <div class="d-flex justify-content-center">
+                            <ul>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/fashion.html">Fashion</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Electronics</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Kids' Furniture</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Household</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Vehicle</a></li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
