--- a/page-listing/electronics.html
+++ b/page-listing/electronics.html
@@ -19,7 +19,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
-    <title>OBG | Fashion</title>
+    <title>OBG | Electronics</title>
     <link rel="icon" href="../resources/images/logo.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -140,11 +140,10 @@
     <div class="mt-3">-</div>
     <div class="container mt-5">
         <div class="row">
-            <a href="page-listing/fashion.html" class="remove-underline">
-                <div class="container-fluid p-5 rounded-3 fade-out" style="background-image: url(../resources/images/categories/fashion.jpg); background-position: center left; background-size: cover;">
-                    <p class="fs-4 fw-bold text-white text-hover badge bg-danger"><i class="fas fa-tag"></i> Fashion
-                    </p>
-                    <p class="col-md-8 fs-4 text-white">Clothing, footwear, lifestyle, accessories, makeup,...
+            <a href="page-listing/electronics.html" class="remove-underline">
+                <div class="h-100 p-5 text-white rounded-3 fade-out" style="background-image: url(../resources/images/categories/electronic.jpg); background-position: center left; background-size: cover;">
+                    <p class="fs-4 fw-bold text-white text-hover badge bg-warning"><i class="fas fa-tag"></i> Electronics</p>
+                    <p>Flatscreen TVs, television sets, MP3 players, video recorders, DVD players, radio receivers,...
                     </p>
                 </div>
             </a>
@@ -227,13 +226,13 @@
                     </div>
                     <a href="item-detail/trousers.html">
 
-                        <img src="../resources/images/fashion/fashion1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
+                        <img src="../resources/images/electronic/electronic1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Quebec
                         </p>
                         <a href="item-detail/trousers.html" class="text-dark">
-                            <h5 class="card-title hover-color-red fs-base">Trousers</h5>
+                            <h5 class="card-title hover-color-red fs-base">PC COMPUTER</h5>
                         </a>
                     </div>
                     <div class="card-footer bg-white">
@@ -261,11 +260,11 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/fashion/fashion2-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
+                        <img src="../resources/images/electronic/electronic2-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
-                        <h5 class="card-title hover-color-red fs-base">Fred Perry shoes</h5>
+                        <h5 class="card-title hover-color-red fs-base">GPO dial telephone</h5>
                     </div>
                     <div class="card-footer bg-white">
                         <div class="row align-items-center g-0">
@@ -291,12 +290,12 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/fashion/fashion3-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
+                        <img src="../resources/images/electronic/electronic3-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Halifax
                         </p>
-                        <h5 class="card-title hover-color-red fs-base">Brown Leather</h5>
+                        <h5 class="card-title hover-color-red fs-base">Apple Mac Mini</h5>
                     </div>
                     <div class="card-footer bg-white">
                         <div class="row align-items-center g-0">
@@ -323,12 +322,12 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/fashion/fashion4-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
+                        <img src="../resources/images/electronic/electronic4-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Fredericton
                         </p>
-                        <h5 class="card-title hover-color-red fs-base">Rolex DATEJUST</h5>
+                        <h5 class="card-title hover-color-red fs-base">1TB Internal Hard Drive</h5>
                     </div>
                     <div class="card-footer bg-white">
                         <div class="row align-items-center g-0">
@@ -358,13 +357,13 @@
                     </div>
                     <a href="item-detail/trousers.html">
 
-                        <img src="../resources/images/fashion/fashion5-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
+                        <img src="../resources/images/electronic/electronic5-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Quebec
                         </p>
                         <a href="item-detail/trousers.html" class="text-dark">
-                            <h5 class="card-title hover-color-red fs-base">Adidas track suit</h5>
+                            <h5 class="card-title hover-color-red fs-base">Acer Aspire Laptop</h5>
                         </a>
                     </div>
                     <div class="card-footer bg-white">
@@ -392,11 +391,11 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/fashion/fashion6-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
+                        <img src="../resources/images/electronic/electronic6-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
-                        <h5 class="card-title hover-color-red fs-base">White Fur Slippers</h5>
+                        <h5 class="card-title hover-color-red fs-base">Canon Pixma Printer</h5>
                     </div>
                     <div class="card-footer bg-white">
                         <div class="row align-items-center g-0">
@@ -422,12 +421,12 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/fashion/fashion7-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
+                        <img src="../resources/images/electronic/electronic7-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Halifax
                         </p>
-                        <h5 class="card-title hover-color-red fs-base">Swiss Court Pro II</h5>
+                        <h5 class="card-title hover-color-red fs-base">Sony Xperia Z3</h5>
                     </div>
                     <div class="card-footer bg-white">
                         <div class="row align-items-center g-0">
@@ -454,12 +453,12 @@
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
                     <a href="#">
-                        <img src="../resources/images/fashion/fashion8-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
+                        <img src="../resources/images/electronic/electronic8-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Fredericton
                         </p>
-                        <h5 class="card-title hover-color-red fs-base">Rose gold Fitbit Versa</h5>
+                        <h5 class="card-title hover-color-red fs-base">Vintage Telephone</h5>
                     </div>
                     <div class="card-footer bg-white">
                         <div class="row align-items-center g-0">
@@ -478,108 +477,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-lg-3 col-md-6">
-                <div class="card remove-border card-hover mb-5 border-0">
-                    <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
-                        <span class="d-table badge bg-success mb-1">Exchange</span>
-                        <span class="d-table badge bg-danger">Sale</span>
-                    </div>
-                    <a href="item-detail/trousers.html">
-
-                        <img src="../resources/images/fashion/fashion9-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
-                    </a>
-                    <div class="card-body rounded-3">
-                        <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Quebec
-                        </p>
-                        <a href="item-detail/trousers.html" class="text-dark">
-                            <h5 class="card-title hover-color-red fs-base">Versace Sunglasses</h5>
-                        </a>
-                    </div>
-                    <div class="card-footer bg-white">
-                        <div class="row align-items-center g-0">
-                            <div class="col-auto">
-                                <img src="../resources/images/avatar/01.jpg" width="32" height="32" class="rounded-circle" alt="avatar">
-                            </div>
-                            <div class="col ms-2">
-                                <a href="#" class="text-muted">Samuel</a>
-                            </div>
-                            <div class="col-auto">
-                                <button class="btn" onclick="Toasty( )">
-                                    <i class="fas fa-cart-plus" data-bs-toggle="tooltip" data-bs-placement="top"
-                                        title="Add to card"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <div class="card remove-border card-hover mb-5 border-0">
-                    <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
-                        <span class="d-table badge bg-success mb-1">Exchange</span>
-                        <span class="d-table badge bg-danger">Sale</span>
-                    </div>
-                    <a href="#">
-                        <img src="../resources/images/fashion/fashion10-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
-                    </a>
-                    <div class="card-body rounded-3">
-                        <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
-                        <h5 class="card-title hover-color-red fs-base">Vintage handbag</h5>
-                    </div>
-                    <div class="card-footer bg-white">
-                        <div class="row align-items-center g-0">
-                            <div class="col-auto">
-                                <img src="../resources/images/avatar/02.jpg" width="32" height="32" class="rounded-circle" alt="">
-                            </div>
-                            <div class="col ms-2">
-                                <a href="#" class="text-muted">Dennis</a>
-                            </div>
-                            <div class="col-auto">
-                                <button class="btn" onclick="Toasty( )">
-                                    <i class="fas fa-cart-plus" data-bs-toggle="tooltip" data-bs-placement="top"
-                                        title="Add to card"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <div class="card remove-border card-hover mb-5 border-0">
-                    <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
-                        <span class="d-table badge bg-danger">Sale</span>
-                    </div>
-                    <a href="#">
-                        <img src="../resources/images/fashion/fashion11-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
-                    </a>
-                    <div class="card-body rounded-3">
-                        <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Halifax
-                        </p>
-                        <h5 class="card-title hover-color-red fs-base">Vintage Coat</h5>
-                    </div>
-                    <div class="card-footer bg-white">
-                        <div class="row align-items-center g-0">
-                            <div class="col-auto">
-                                <img src="../resources/images/avatar/03.jpg" width="32" height="32" class="rounded-circle" alt="">
-                            </div>
-                            <div class="col ms-2">
-                                <a href="#" class="text-muted">Bryan</a>
-                            </div>
-                            <div class="col-auto">
-                                <button class="btn" onclick="Toasty( )">
-                                    <i class="fas fa-cart-plus" data-bs-toggle="tooltip" data-bs-placement="top"
-                                        title="Add to card"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-
             </div>
         </div>
         <!-- End Products -->
