--- a/post.html
+++ b/post.html
@@ -202,7 +202,6 @@
                 </div>
                 <div class="col-md-7 col-lg-8">
                     <h4 class="mb-3">Billing address</h4>
-                    <!-- <form class="form" method="post" action="#" id="form"> -->
                     <form class="needs-validation form" method="post" action="#" id="form" novalidate>
                         <div class="row g-3">
                             <div class="col-sm-12">
@@ -232,7 +231,6 @@
                                     <option >Vehical</option>
 
                                 </select>
-                                <!-- <input type="text" class="form-control form-input" id="category" required> -->
                                 <div class="invalid-feedback">
                                     Valid category is required.
                                 </div>
@@ -253,24 +251,18 @@
                             </div>
 
                             <div class="col-sm-12">
-                                <!-- <div class="container mt-3 w-100"> -->
-                                <div class="card shadow-sm w-100">
-                                    <div class="card-header d-flex justify-content-between">
-                                        <h4>Image Uploading</h4>
-                                        <!-- <form class="form" action="#" id="form"></form> -->
+                                <hr>
+                                <div class="card border-0">
+                                    <div class="card-header d-flex justify-content-between bg-white">
+                                        <h5>Upload Image</h5>
                                         <input type="file" name="Image" id="imageinput" multiple="" class="d-none" onchange="image_select()">
-                                        <button class="btn btn-sm btn-primary" type="button" onclick="document.getElementById('imageinput').click()">Choose Images</button>
-                                        <!-- </form> -->
+                                        <button class="btn-upload" type="button" onclick="document.getElementById('imageinput').click()">Browse</button>
                                     </div>
                                     <div class="card-body d-flex flex-wrap justify-content-start h-100" id="container">
                                         <!-- Image will be show here-->
                                     </div>
                                 </div>
-
-                                <!-- </div> -->
                             </div>
-
-
 
                         </div>
 
@@ -280,7 +272,7 @@
 
                         <div class="my-3">
                             <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked>
+                                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
                                 <label class="form-check-label" for="flexSwitchCheckDefault">Exchange</label>
                             </div>
                             <div class="form-check form-switch">
@@ -288,9 +280,6 @@
                                 <label class="form-check-label" for="flexSwitchCheckChecked">Sale</label>
                             </div>
                         </div>
-
-
-
 
                         <div class="row gy-3">
                             <div class="col-md-12" id="thegia" style="display: none;">
@@ -332,14 +321,16 @@
                     </div>
 
                     <div class="col-lg-3 col-md-12 footer-links">
-                        <h4>Categories</h4>
-                        <ul>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Fashion</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Electronics</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Kids' Furniture</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Household</a></li>
-                            <li><i class="fas fa-chevron-right"></i></i> <a href="#">Vehicle</a></li>
-                        </ul>
+                        <h4 class="text-center">Categories</h4>
+                        <div class="d-flex justify-content-center">
+                            <ul>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/fashion.html">Fashion</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/electronics.html">Electronics</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/kids'_furniture.html">Kids' Furniture</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/household.html">Household</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/vehicle.html">Vehicle</a></li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
@@ -371,36 +362,6 @@
     <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
         <i class="fas fa-arrow-up"></i>
     </button>
-
-
-    <script>
-        //Get the button
-        let mybutton = document.getElementById("btn-back-to-top");
-
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function() {
-            scrollFunction();
-        };
-
-        function scrollFunction() {
-            if (
-                document.body.scrollTop > 20 ||
-                document.documentElement.scrollTop > 20
-            ) {
-                mybutton.style.display = "block";
-            } else {
-                mybutton.style.display = "none";
-            }
-        }
-        // When the user clicks on the button, scroll to the top of the document
-        mybutton.addEventListener("click", backToTop);
-
-        function backToTop() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-    </script>
-
 
     <!-- ---upload image---- -->
     <script>
@@ -457,14 +418,8 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- Tooltip -->
-    <script>
-        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function(tooltipTriggerEl) {
-            return new bootstrap.Tooltip(tooltipTriggerEl)
-        })
-    </script>
 
-    <!-- -----script validation------ -->
+    <!-- -----Validation------ -->
     <script>
         (function() {
             'user strict'
@@ -502,6 +457,7 @@
     </script>
 
     <!-- End Tooltip -->
+    <script src="resources/js/main.js"></script>
 </body>
 
 </html>
