--- a/deal.html
+++ b/deal.html
@@ -200,7 +200,7 @@
                         </a>
                     </div>
                     <div class="col-lg-8 d-flex justify-content-between">
-                        <a href="#" class="text-decoration-none text-dark d-flex">
+                        <a href="deals/fitbit_versa_2.html" class="text-decoration-none text-dark d-flex">
                             <span class="text-danger">wants to exchange with you</span>
                         </a>
                         <span>Dec 21</span>
