--- a/deals/fitbit_versa_2.html
+++ b/deals/fitbit_versa_2.html
@@ -7,19 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
 
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-    <title>OBG | HP Computer</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- Icon -->
     <link rel="icon" href="../resources/images/logo.png">
+
+    <title>Fitbit Versa 2</title>
+
+    <!-- --- Link Zoom image--- -->
+    <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+    <link href="https://www.jqueryscript.net/demo/Powerful-Multi-Functional-jQuery-Lightbox-Plugin-Magnific-Popup/dist/magnific-popup.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://www.jqueryscript.net/demo/Powerful-Multi-Functional-jQuery-Lightbox-Plugin-Magnific-Popup/dist/jquery.magnific-popup.js"></script>
 
 </head>
 
@@ -42,7 +52,6 @@
                         <i class="far fa-bell" data-bs-toggle="tooltip" data-bs-placement="bottom"
                             title="Notification"></i>
                     </button>
-
 
                 </li>
                 <li class="nav-item">
@@ -133,13 +142,14 @@
         </ul>
     </nav>
     <!-- End Navbar for mobile -->
-    <div class="mt-3">-</div>
-    <div class="container px-4 mt-5">
-        <div class="row gx-5">
-            <div class="col-lg-4 shadow-sm bg-white info">
+
+    <!-- Tracking -->
+    <div class="mt-3">_</div>
+    <div class="container mt-5 mb-5">
+        <div class="row">
+            <div class="col-lg-4 shadow-sm bg-white rounded-3 h-50 info">
                 <div class="avatar">
                     <div class="d-flex justify-content-center">
-
                         <img src="https://github.com/mdo.png" alt="avatar" width="120" height="120" class="rounded-circle">
                     </div>
                     <h4 class="text-center">William Tom</h4>
@@ -156,9 +166,9 @@
                                 Orders <i class="fas fa-arrow-right"></i>
                             </a>
                         </li>
-                        <li class="border-top-0 border-start-0 border-end-0 list-group-item ">
+                        <li class="border-top-0 border-start-0 border-end-0 list-group-item">
                             <a href="../deal.html" class="d-flex justify-content-between align-items-center text-danger">
-                                Deals <i class="fas fa-arrow-right"></i>
+                                Deal <i class="fas fa-arrow-right"></i>
                             </a>
                         </li>
                         <li class="border-top-0 border-start-0 border-end-0 list-group-item ">
@@ -169,84 +179,111 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-8">
-                <!-- Deals -->
-                <div class="row mt-2">
-                    <div class="col-lg-12">
-                        <div class="card mb-3 border-0 shadow-sm">
-                            <div class="row g-0">
-                                <div class="col-lg-4">
-                                    <img src="../resources/images/fashion/fashion8-1.jpg" class="rounded-3 p-2 img-fix" alt="item-image" height="200" width="200">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-7 rounded-3">
+                <div class="item border bg-white">
+                    <div class="row m-3 item-header">
+                        <div class="col-lg-6 col-6">
+                            <span class="text-muted tracking-title">DATE:</span><br>
+                            <span class="tracking-content">09 Oct, 2021</span>
+                        </div>
+                        <div class="col-lg-6 d-flex">
+                            <div class="row align-items-center g-0">
+                                <div class="col-auto">
+                                    <img src="../resources/images/avatar/08.jpg" width="32" height="32" class="rounded-circle" alt="">
                                 </div>
-                                <div class="col-lg-8">
-                                    <div class="card-body">
-                                        <p class="card-text">
-                                            <div class="row">
-                                                <div class="col-lg-6">
-                                                    <div class="time">
-                                                        <i class="far fa-clock"></i> 12 June 2021
-                                                    </div>
-                                                </div>
-                                                <div class="col-lg-6 d-flex">
-                                                    <button class="btn-success me-2 rounded-3">Confirm</button>
-                                                    <button class="btn-danger rounded-3">Deny</button>
-                                                </div>
-                                            </div>
-                                        </p>
-                                        <h5 class="card-title">Fitbit Versa 2</h5>
-                                        <div class="row align-items-center g-0">
-                                            <div class="col-auto">
-                                                <img src="../resources/images/avatar/01.jpg" width="32" height="32" class="rounded-circle" alt="avatar">
-                                            </div>
-                                            <div class="col ms-2">
-                                                <a href="../profiles/samuel.html" class="text-muted">Samuel</a>
-                                            </div>
-                                        </div>
-                                    </div>
+                                <div class="col">
+                                    <a href="#" class="text-muted ms-2">Joan</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-12">
-                        <div class="card mb-3 border-0 shadow-sm">
-                            <div class="row g-0">
-                                <div class="col-lg-4">
-                                    <img src="../resources/images/electronic/electronic1-1.jpg" class="rounded-3 p-2 img-fix" alt="item-image" height="200" width="200">
+                    <div class="row item-body m-3">
+                        <h5 class="mt-2 mb-2">Item to exchange</h5>
+                        <hr>
+                        <div class="item mb-3">
+                            <div class="row d-flex justify-content-center align-items-center">
+                                <div class="col-4">
+                                    <img src="../resources/images/fashion/fashion9-1.jpg" alt="" width="100" height="110">
                                 </div>
-                                <div class="col-lg-8">
-                                    <div class="card-body">
-                                        <p class="card-text">
-                                            <div class="row">
-                                                <div class="col-lg-6">
-                                                    <div class="time">
-                                                        <i class="far fa-clock"></i> 12 June 2021
-                                                    </div>
-                                                </div>
-                                                <div class="col-lg-6 d-flex">
-                                                    <button class="btn-success me-2 rounded-3">Confirm</button>
-                                                    <button class="btn-danger rounded-3">Deny</button>
-                                                </div>
-                                            </div>
-                                        </p>
-                                        <h5 class="card-title">Fitbit Versa 2</h5>
-                                        <div class="row align-items-center g-0">
-                                            <div class="col-auto">
-                                                <img src="../resources/images/avatar/01.jpg" width="32" height="32" class="rounded-circle" alt="avatar">
-                                            </div>
-                                            <div class="col ms-2">
-                                                <a href="../profiles/samuel.html" class="text-muted">Samuel</a>
-                                            </div>
-                                        </div>
-                                    </div>
+                                <div class="col-8">
+                                    <a class="h6 text-dark" href="../item-detail/white_fur_slippers.html">Versace Sunglasses</a> <br>
+                                    <span class="text-muted">Amount: 1</span>
+                                </div>
+                            </div>
+                        </div>
+                        <h5 class="mt-2 mb-2">Item want to exchange</h5>
+                        <hr>
+                        <div class="item mt-2">
+                            <div class="row d-flex justify-content-center align-items-center">
+                                <div class="col-4">
+                                    <img src="../resources/images/fashion/fashion8-1.jpg" alt="" width="100" height="110">
+                                </div>
+                                <div class="col-8">
+                                    <a class="text-dark h6" href="../item-detail/swiss_court_pro_II.html">Fitbit Versa 2</a> <br>
+                                    <span class="text-muted">Amount: 1</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- End Deals -->
+                <div class="item border bg-white mt-2 p-3">
+                    <h5 class="mt-2 mb-2">Description</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, quibusdam, quam, numquam aliquid praesentium dolores nostrum temporibus saepe officiis odit aut cum dolorem unde voluptatum ratione porro doloremque! Quas, harum.
+                    </p>
+                    <div class="popup-gallery">
+                        <div class="row">
+                            <div class="col-md-3 mt-3">
+                                <a href="../resources/images/fashion/fashion9-1.jpg">
+                                    <img src="../resources/images/fashion/fashion9-1.jpg" width="100%" class="for-mobile-preview">
+                                </a>
+
+                            </div>
+                            <div class="col-md-3 mt-3">
+                                <a href="../resources/images/fashion/fashion9-2.jpg">
+                                    <img src="../resources/images/fashion/fashion9-2.jpg" width="100%" class="for-mobile-preview">
+                                </a>
+
+                            </div>
+                            <div class="col-md-3 mt-3">
+                                <a href="../resources/images/fashion/fashion9-3.jpg">
+                                    <img src="../resources/images/fashion/fashion9-3.jpg" width="100%" class="for-mobile-preview">
+                                </a>
+
+                            </div>
+                            <div class="col-md-3 mt-3">
+                                <a href="../resources/images/fashion/fashion9-4.jpg">
+                                    <img src="../resources/images/fashion/fashion9-4.jpg" width="100%" class="for-mobile-preview">
+                                </a>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="item border bg-white mt-2 p-3">
+                    <h5 class="mt-2 mb-2">Order Total</h5>
+                    <hr>
+                    <div class="d-flex justify-content-between">
+                        <span>Shipping</span>
+                        <span>$05</span>
+                    </div>
+                    <hr>
+                    <div class="d-flex justify-content-between fw-bold">
+                        <span>Total</span>
+                        <span>$05</span>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <button class="btn-confirm me-5">Confirm</button>
+                        <button class="btn-deny">Deny</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    <!-- End Tracking -->
 
     <!-- Footer -->
     <footer id="footer" class="footer mb-3">
@@ -272,10 +309,10 @@
                         <div class="d-flex justify-content-center">
                             <ul>
                                 <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/fashion.html">Fashion</a></li>
-                                <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/electronics.html">Electronics</a></li>
-                                <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/kids'_furniture.html">Kids' Furniture</a></li>
-                                <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/household.html">Household</a></li>
-                                <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/vehicle.html">Vehicle</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Electronics</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Kids' Furniture</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Household</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="#">Vehicle</a></li>
                             </ul>
                         </div>
                     </div>
@@ -305,7 +342,32 @@
     </footer>
     <!-- End Footer -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- Tooltip -->
+    <script>
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+        var tooltipList = tooltipTriggerList.map(function(tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl)
+        })
+    </script>
+    <!-- End Tooltip -->
+    <script>
+        $(document).ready(function() {
+            $('.popup-gallery').magnificPopup({
+                delegate: 'a',
+                type: 'image',
+                tLoading: 'Loading image #%curr%...',
+                mainClass: 'mfp-img-mobile',
+                gallery: {
+                    enabled: true,
+                    navigateByImgClick: true,
+                    preload: [0, 1]
+                },
+
+            });
+        });
+    </script>
 </body>
 
 </html>
