--- a/item-detail/trousers.html
+++ b/item-detail/trousers.html
@@ -322,7 +322,57 @@
                             <a class="text-dark" href="#">Jose Leos</a>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-primary mb-3">Exchange</button>
+                    <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#exchange">Exchange</button>
+                    <div class="modal fade" id="exchange" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Description</h5>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row g-5 mb-3">
+                                        <form class="needs-validation form" method="post" action="#" id="form" novalidate>
+                                            <div class="row g-3">
+                                                <div class="col-sm-12">
+                                                    <label for="title" class="form-label">Title</label>
+                                                    <input type="text" class="form-control form-input" id="title" placeholder="" value="" required>
+                                                    <div class="invalid-feedback">
+                                                        Valid title is required.
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-sm-12">
+                                                    <label for="description" class="form-label">Description</label>
+                                                    <textarea class="form-control form-input" id="description" rows="5" required></textarea>
+                                                    <div class="invalid-feedback">
+                                                        Valid description is required.
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-sm-12">
+                                                    <hr>
+                                                    <div class="card border-0">
+                                                        <div class="card-header d-flex justify-content-between bg-white">
+                                                            <h5>Upload Image</h5>
+                                                            <input type="file" name="Image" id="imageinput" multiple="" class="d-none" onchange="image_select()">
+                                                            <button class="btn-upload" type="button" onclick="document.getElementById('imageinput').click()">Browse</button>
+                                                        </div>
+                                                        <div class="card-body d-flex flex-wrap justify-content-start h-100" id="container">
+                                                            <!-- Image will be show here-->
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-cancel" data-bs-dismiss="modal">Cancel</button>
+                                    <button type="button" class="btn btn-confirm">Confirm</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="card border-light mt-4 p-3">
                     <h5 class="font-weight-normal">Contact</h5>
@@ -703,6 +753,59 @@
             toastElement.show();
         }
     </script>
+
+    <!-- ---upload image---- -->
+    <script>
+        var images = [];
+
+        function image_select() {
+            var image = document.getElementById('imageinput').files;
+            for (i = 0; i < image.length; i++) {
+                if (check_duplicate(image[i].name)) {
+                    images.push({
+                        "name": image[i].name,
+                        "url": URL.createObjectURL(image[i]),
+                        "file": image[i],
+                    })
+                } else {
+                    alert(image[i].name + " is already added to the list");
+                }
+            }
+            document.getElementById('form').reset();
+            document.getElementById('container').innerHTML = image_show();
+        }
+
+
+        function image_show() {
+            var image = "";
+            images.forEach((i) => {
+                image += `<div class="image_container d-flex justify-content-center position-relative">
+                       <img src="` + i.url + `" alt="Image">
+                       <span class="position-absolute" onclick="delete_image(` + images.indexOf(i) + `)">&times;</span>
+                 </div>`;
+            })
+            return image;
+        }
+
+        function delete_image(e) {
+            images.splice(e, 1);
+            document.getElementById('container').innerHTML = image_show();
+        }
+
+        function check_duplicate(name) {
+            var image = true;
+            if (images.length > 0) {
+                for (e = 0; e < images.length; e++) {
+                    if (images[e].name == name) {
+                        image = false;
+                        break;
+                    }
+                }
+            }
+            return image;
+        }
+    </script>
+
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
