--- a/profile.html
+++ b/profile.html
@@ -237,34 +237,26 @@
                     </div>
 
                     <h5 class="mt-4">Social Network</h5>
-                    <div class="row mb-2">
-                        <div class="col-lg-4">
-                            <a class="btn-share btn-twitter me-2 my-2" href="#"><i
-                                class="fab fa-twitter"></i> Twitter</a>
-                        </div>
-                        <div class="col-lg-8">
-                            <input type="text" class="form-control form-control-input" id="zip" placeholder="https://twitter.com/">
-                        </div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col-lg-4">
-                            <a class="btn-share btn-instagram me-2 my-2" href="#"><i
-                                class="fab fa-instagram"></i> Instagram</a>
-                        </div>
-                        <div class="col-lg-8">
-                            <input type="text" class="form-control form-control-input" id="zip" placeholder="https://www.instagram.com/">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <a class="btn-share btn-facebook my-2" href="#"><i
-                                class="fab fa-facebook"></i> Facebook</a>
-                        </div>
-                        <div class="col-lg-8">
-                            <input type="text" class="form-control form-control-input" id="zip" placeholder="https://www.facebook.com/">
-                        </div>
-                    </div>
                     <button class="mt-2 btn btn-save">Save All</button>
+                </div>
+                <div class="p-4">
+                    <h5>Change Password</h5>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <label for="current-password" class="form-label">Current Password</label>
+                            <input type="text" class="form-control form-control-input" id="current-password">
+                        </div>
+                        <div class="col-lg-12">
+                            <label for="new-password" class="form-label">New Password</label>
+                            <input type="text" class="form-control form-control-input" id="new-password">
+                        </div>
+                        <div class="col-lg-12">
+                            <label for="verify-password" class="form-label">Verify</label>
+                            <input type="text" class="form-control form-control-input" id="verify-password">
+                            <span class="small text-muted">To confirm, type the new password again.</span>
+                        </div>
+                    </div>
+                    <button class="mt-2 btn btn-save">Save</button>
                 </div>
             </div>
         </div>
